--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
 
    <!-- <body background-color: #FFF; background="../Recetario/img/fondo.jpeg">-->
-    <body background="../Recetario/img/fondo.jpeg">
+    <body background="./img/fondo.jpeg">
         <head><!-- Cabecera del body-->
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
@@ -33,10 +33,10 @@
             <div class="centrar">
                 <div class="alinear">
                    <!-- <p align="Center"><img src="../Recetario/img/popurrifood.jpeg" alt="Error con img popurrifood"  width="200" height="150"/> </p> -->
-                   <div> <img  src="./Recetario/img/popurrifood.jpeg" alt="Error con img popurrifood" /> </div>
-                   <div> <img  src="./Recetario/img/popurrifood2.jpeg" alt="Error con img popurrifood" /></div>
-                   <div class="figura3"><img  src="./Recetario/img/popurrifood3.jpeg" alt="Error con img popurrifood" /></div>
-                   <div class="figura4"><img  src="./Recetario/img/popurrifood4.jpeg" alt="Error con img popurrifood" /></div>
+                   <div> <img  src="./img/popurrifood.jpeg" alt="Error con img popurrifood" /> </div>
+                   <div> <img  src="./img/popurrifood2.jpeg" alt="Error con img popurrifood" /></div>
+                   <div class="figura3"><img  src="./img/popurrifood3.jpeg" alt="Error con img popurrifood" /></div>
+                   <div class="figura4"><img  src="./img/popurrifood4.jpeg" alt="Error con img popurrifood" /></div>
                 </div>
             </div>
            
@@ -53,9 +53,9 @@
                     
 
                 <tr bgcolor="#AAA"> <!-- fila-->
-                    <td><a href="../Recetario/paginas/budin.html"> Budin Bicolor </a></td> <!-- columna-->
-                    <td><a href="../Recetario/paginas/fideos.html"> Fideos con Brocoli</a></td>
-                    <td><a href="../Recetario/paginas/panqueques.html"> Panqueques</a></td>
+                    <td><a href="./paginas/budin.html"> Budin Bicolor </a></td> <!-- columna-->
+                    <td><a href="./paginas/fideos.html"> Fideos con Brocoli</a></td>
+                    <td><a href="./paginas/panqueques.html"> Panqueques</a></td>
                 </tr>
 
                <!-- <tr bgcolor="#AAA">  
@@ -74,8 +74,8 @@
 
         <footer> <!-- Pie del body-->
             <div class="text-center p-5">
-                <a href="../Recetario/archivos/receta_1.txt"><img src="../Recetario/img/gift.png" class="img-fluid rounded " width="75" height="75"></a>
-                <a href="../Recetario/form/sugerencia.html"><img src="../Recetario/img/suggestion-box.png" class="img-fluid rounded" width="75" height="75"></a>
+                <a href="./archivos/receta_1.txt"><img src="./img/gift.png" class="img-fluid rounded " width="75" height="75"></a>
+                <a href="./form/sugerencia.html"><img src="./img/suggestion-box.png" class="img-fluid rounded" width="75" height="75"></a>
             </div>
         </footer>
         <!-- esto script de Bootstrap debe ir al pie del body siempre-->
