--- a/paginas/budin.html
+++ b/paginas/budin.html
@@ -24,7 +24,7 @@
              
             <h2 id="colorentradas" align="Center"> Saludable y facil de preparar </h2>
            <!--
-             <img src="..//img/budin.jpeg" alt="Error con img budin"/>-->
+             <img src="./img/budin.jpeg" alt="Error con img budin"/>-->
 
              <div class="container">
                     <div class="row py-3">
