--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
         <main><!-- Desarrollo del body-->
             <div class="conten-titulo">
-                <h1 class="animate__animated animate__rubberBand"> P<span class="arroba">@</span>purri de Recetas Faciles </h1>
+                <h1 class="h1 animate__animated animate__rubberBand"> P<span class="arroba">@</span>purri de Recetas Faciles </h1>
             </div>
-            
+            <!--
             <div class="centrar">
                 <div class="alinear">
                    <div> <img class="img-responsive" src="./img/popurrifood.jpeg" alt="Error con img popurrifood" /> </div>
@@ -37,10 +37,18 @@
                    <div class="figura3 img-responsive"><img  src="./img/popurrifood3.jpeg" alt="Error con img popurrifood" /></div>
                    <div class="figura4 img-responsive"><img  src="./img/popurrifood4.jpeg" alt="Error con img popurrifood" /></div>
                 </div>
+            </div>-->
+            <div class="container">
+                <div class="row">
+                  <div class="col-sm"> <img class="img-responsive" src="./img/popurrifood.jpeg" alt="Error con img popurrifood"/></div>
+                  <div class="col-sm"> <img class="img-responsive" src="./img/popurrifood2.jpeg" alt="Error con img popurrifood" /></div>
+                  <div class="col-sm figura3 img-responsive"> <img  src="./img/popurrifood3.jpeg" alt="Error con img popurrifood" /> </div>
+                  <div class="col-sm figura4 img-responsive"> <img  src="./img/popurrifood4.jpeg" alt="Error con img popurrifood" /></div>
+                </div>
             </div>
            
             <div class="conten-titulo"> 
-                <h2 style="text-align: center"> Para que la receta del Tiempo sea tu Amig(:) </h2>
+                <h2 class="h2" style="text-align: center"> Para que la receta del Tiempo sea tu Amig(:) </h2>
             </div>
             <table border="1px solid #2b2b2b" cellpadding="5px" cellspacing="0" align="center">
                 <tr bgcolor="#FF0"><!-- fila-->
