--- a/paginas/budin.html
+++ b/paginas/budin.html
@@ -19,10 +19,10 @@
 
         <main><!-- Desarrollo del body-->
             <div class="conten-titulo">
-                <h1 class="animate__animated animate__bounce"><span style="color:rgb(14, 100, 14)"> BUDIN</span> <span style="color:rgb(128, 28, 0)"> BICOLOR</span> </h1>
+                <h1 class="h1 animate__bounce"><span style="color:rgb(14, 100, 14)"> BUDIN</span> <span style="color:rgb(128, 28, 0)"> BICOLOR</span> </h1>
             </div>
              
-            <h2 id="colorentradas" align="Center"> Saludable y facil de preparar </h2>
+            <h2 id="colorentradas" class="h2" align="Center"> Saludable y facil de preparar </h2>
            <!--
              <img src="./img/budin.jpeg" alt="Error con img budin"/>-->
 
@@ -75,7 +75,7 @@
                 
             </dl>
             <dl>
-                <h2 id="colorentradas" style="text-align: center"><dt>Video de Preparación</dt></h2>
+                <h2 id="colorentradas" class="h2" style="text-align: center"><dt>Video de Preparación</dt></h2>
                 <iframe width="564" height="317" src="https://www.youtube.com/embed/PTznlLkEyos" title="RECETA de Budín tricolor" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </dl>
 
