--- a/paginas/panqueques.html
+++ b/paginas/panqueques.html
@@ -19,8 +19,8 @@
 
         <main><!-- Desarrollo del body-->
 
-            <h1 style="text-align: center" class="animate__animated animate__shakeX" > PANQUEQUES </h1>
-            <h2 id="colorpostre" style="text-align: center"> Postre rico, facil y rapido de preparar </h2>
+            <h1 style="text-align: center" class="h1 animate__animated animate__shakeX" > PANQUEQUES </h1>
+            <h2 id="colorpostre" class="h2" style="text-align: center"> Postre rico, facil y rapido de preparar </h2>
             <!--
             <img src="..//img/panqueques.jpeg" alt="Error con img panqueques"/>-->
             <div class="container">
@@ -85,7 +85,7 @@
                 
             </dl>
             <dl>
-                <h2 id="colorpostre" style="text-align: center"><dt>Sitios de Interes</dt></h2>
+                <h2 id="colorpostre" class="h2" style="text-align: center"><dt>Sitios de Interes</dt></h2>
                 <a href="https://www.laserenisima.com.ar/recetaslaserenisima/receta.php?receta=95-panqueques-con-dulce-de-leche" target="_blank">
                     Panqueques con dulce de leche
                 </a><br>
@@ -94,7 +94,7 @@
                 </a>
             </dl>
             <dl>
-                <h2 id="colorpostre" style="text-align: center"><dt>Video de Preparación</dt></h2>
+                <h2 id="colorpostre"class="h2" style="text-align: center"><dt>Video de Preparación</dt></h2>
                 <iframe width="564" height="317" src="https://www.youtube.com/embed/BYBcLbpsoxM" title="Receta básica de panqueques que sirve para rellenos dulces o salados!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </dl>
 
